# backup/v0.1/server.pb.go
@@ -1,0 +1,180 @@
+// Code generated by protoc-gen-go.
+// source: server.proto
+// DO NOT EDIT!
+
+package backup
+
+import proto "github.com/golang/protobuf/proto"
+import fmt "fmt"
+import math "math"
+import _ "github.com/gengo/grpc-gateway/third_party/googleapis/google/api"
+import dtypes "github.com/appscode/api/dtypes"
+
+import (
+	context "golang.org/x/net/context"
+	grpc "google.golang.org/grpc"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+type ServerCreateRequest struct {
+	Name        string `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
+	Namespace   string `protobuf:"bytes,2,opt,name=namespace" json:"namespace,omitempty"`
+	ClusterName string `protobuf:"bytes,3,opt,name=cluster_name" json:"cluster_name,omitempty"`
+	Credential  string `protobuf:"bytes,4,opt,name=credential" json:"credential,omitempty"`
+	BucketName  string `protobuf:"bytes,5,opt,name=bucket_name" json:"bucket_name,omitempty"`
+	Disk        string `protobuf:"bytes,9,opt,name=disk" json:"disk,omitempty"`
+}
+
+func (m *ServerCreateRequest) Reset()                    { *m = ServerCreateRequest{} }
+func (m *ServerCreateRequest) String() string            { return proto.CompactTextString(m) }
+func (*ServerCreateRequest) ProtoMessage()               {}
+func (*ServerCreateRequest) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{0} }
+
+type ServerDeleteRequest struct {
+	Name        string `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
+	Namespace   string `protobuf:"bytes,2,opt,name=namespace" json:"namespace,omitempty"`
+	ClusterName string `protobuf:"bytes,3,opt,name=cluster_name" json:"cluster_name,omitempty"`
+}
+
+func (m *ServerDeleteRequest) Reset()                    { *m = ServerDeleteRequest{} }
+func (m *ServerDeleteRequest) String() string            { return proto.CompactTextString(m) }
+func (*ServerDeleteRequest) ProtoMessage()               {}
+func (*ServerDeleteRequest) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{1} }
+
+func init() {
+	proto.RegisterType((*ServerCreateRequest)(nil), "backup.ServerCreateRequest")
+	proto.RegisterType((*ServerDeleteRequest)(nil), "backup.ServerDeleteRequest")
+}
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ context.Context
+var _ grpc.ClientConn
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+const _ = grpc.SupportPackageIsVersion2
+
+// Client API for Server service
+
+type ServerClient interface {
+	Create(ctx context.Context, in *ServerCreateRequest, opts ...grpc.CallOption) (*dtypes.VoidResponse, error)
+	Delete(ctx context.Context, in *ServerDeleteRequest, opts ...grpc.CallOption) (*dtypes.VoidResponse, error)
+}
+
+type serverClient struct {
+	cc *grpc.ClientConn
+}
+
+func NewServerClient(cc *grpc.ClientConn) ServerClient {
+	return &serverClient{cc}
+}
+
+func (c *serverClient) Create(ctx context.Context, in *ServerCreateRequest, opts ...grpc.CallOption) (*dtypes.VoidResponse, error) {
+	out := new(dtypes.VoidResponse)
+	err := grpc.Invoke(ctx, "/backup.Server/Create", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *serverClient) Delete(ctx context.Context, in *ServerDeleteRequest, opts ...grpc.CallOption) (*dtypes.VoidResponse, error) {
+	out := new(dtypes.VoidResponse)
+	err := grpc.Invoke(ctx, "/backup.Server/Delete", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// Server API for Server service
+
+type ServerServer interface {
+	Create(context.Context, *ServerCreateRequest) (*dtypes.VoidResponse, error)
+	Delete(context.Context, *ServerDeleteRequest) (*dtypes.VoidResponse, error)
+}
+
+func RegisterServerServer(s *grpc.Server, srv ServerServer) {
+	s.RegisterService(&_Server_serviceDesc, srv)
+}
+
+func _Server_Create_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ServerCreateRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ServerServer).Create(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/backup.Server/Create",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ServerServer).Create(ctx, req.(*ServerCreateRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Server_Delete_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ServerDeleteRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ServerServer).Delete(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/backup.Server/Delete",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ServerServer).Delete(ctx, req.(*ServerDeleteRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+var _Server_serviceDesc = grpc.ServiceDesc{
+	ServiceName: "backup.Server",
+	HandlerType: (*ServerServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Create",
+			Handler:    _Server_Create_Handler,
+		},
+		{
+			MethodName: "Delete",
+			Handler:    _Server_Delete_Handler,
+		},
+	},
+	Streams: []grpc.StreamDesc{},
+}
+
+func init() { proto.RegisterFile("server.proto", fileDescriptor1) }
+
+var fileDescriptor1 = []byte{
+	// 295 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0xa4, 0x91, 0x3f, 0x4b, 0xc4, 0x40,
+	0x10, 0xc5, 0xc9, 0x79, 0x06, 0x6e, 0x4c, 0xe3, 0xde, 0x21, 0x21, 0x5a, 0x1c, 0x01, 0xe1, 0x38,
+	0x61, 0xe3, 0x9f, 0xce, 0x56, 0x4b, 0xab, 0x13, 0x6c, 0x65, 0xb3, 0x19, 0xce, 0x90, 0xb8, 0xbb,
+	0xee, 0x6e, 0x0e, 0x6c, 0xf5, 0x23, 0xf8, 0xd1, 0xac, 0xec, 0xfd, 0x20, 0x26, 0x3b, 0x58, 0x28,
+	0x8a, 0x85, 0xcd, 0xc2, 0xfe, 0x18, 0xde, 0x9b, 0xf7, 0x06, 0x12, 0x87, 0x76, 0x83, 0x96, 0x1b,
+	0xab, 0xbd, 0x66, 0x71, 0x29, 0x64, 0xd3, 0x99, 0xec, 0x60, 0xad, 0xf5, 0xba, 0xc5, 0x42, 0x98,
+	0xba, 0x10, 0x4a, 0x69, 0x2f, 0x7c, 0xad, 0x95, 0xa3, 0xa9, 0x6c, 0x6f, 0xc0, 0x95, 0x7f, 0x34,
+	0xe8, 0x8a, 0xf0, 0x12, 0xcf, 0x9f, 0x23, 0x98, 0x5e, 0x07, 0xb9, 0x0b, 0x8b, 0xc2, 0xe3, 0x0a,
+	0x1f, 0x3a, 0x74, 0x9e, 0x25, 0x30, 0x56, 0xe2, 0x1e, 0xd3, 0x68, 0x1e, 0x2d, 0x26, 0x6c, 0x17,
+	0x26, 0xc3, 0xcf, 0x19, 0x21, 0x31, 0x1d, 0x05, 0x34, 0x83, 0x44, 0xb6, 0x9d, 0xf3, 0x68, 0x6f,
+	0xc3, 0xe0, 0x56, 0xa0, 0x0c, 0x40, 0x5a, 0xac, 0x50, 0xf9, 0x5a, 0xb4, 0xe9, 0x38, 0xb0, 0x29,
+	0xec, 0x94, 0x9d, 0x6c, 0xd0, 0xd3, 0xe0, 0x76, 0x80, 0xbd, 0x7e, 0x55, 0xbb, 0x26, 0x9d, 0x0c,
+	0xbf, 0xfc, 0xea, 0x73, 0x89, 0x4b, 0x6c, 0xf1, 0xbf, 0x4b, 0x9c, 0xbe, 0x45, 0x10, 0x93, 0x1c,
+	0xbb, 0x83, 0x98, 0x72, 0xb1, 0x7d, 0x4e, 0x3d, 0xf1, 0x1f, 0xd2, 0x66, 0x33, 0x4e, 0xd5, 0xf0,
+	0x1b, 0x5d, 0x57, 0xab, 0xde, 0xa2, 0x2f, 0x0e, 0xf3, 0xa3, 0xa7, 0xd7, 0xf7, 0x97, 0xd1, 0x61,
+	0x36, 0xef, 0x3b, 0x35, 0x4e, 0xea, 0x8a, 0xca, 0x25, 0x9d, 0x62, 0x73, 0xcc, 0x4f, 0x0a, 0xba,
+	0xc4, 0x79, 0xb4, 0x64, 0x08, 0x31, 0x2d, 0xff, 0xdd, 0xe9, 0x4b, 0xa4, 0x5f, 0x9c, 0x16, 0xc1,
+	0x29, 0x5f, 0xfe, 0xe9, 0x54, 0xc6, 0xe1, 0x6c, 0x67, 0x1f, 0x01, 0x00, 0x00, 0xff, 0xff, 0xea,
+	0x8d, 0xd0, 0x28, 0x04, 0x02, 0x00, 0x00,
+}
