# glusterfs/v0.1/volume.schema.go
@@ -31,6 +31,12 @@ func init() {
 	volumeCreateRequestSchema, err = gojsonschema.NewSchema(gojsonschema.NewStringLoader(`{
   "$schema": "http://json-schema.org/draft-04/schema#",
   "properties": {
+    "bacula_name": {
+      "type": "string"
+    },
+    "enable_bacula": {
+      "type": "integer"
+    },
     "glusterfs_cluster": {
       "type": "string"
     },
